test/library/packages/HDF5/getHDF5TypeError.good
getHDF5TypeError.chpl:9: error: Unhandled type in getHDF5Type: R
